--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
+      "~/*": [
+        "./*"
+      ],
       "@/*": ["./src/*"]
     }
   },
